fixed issue with tags overflowing the game window

--- a/style.css
+++ b/style.css
@@ -46,12 +46,13 @@ header {
     margin:0;
 }
 
-#ui {
+#ui, #tags {
     margin-top:70px;
     top:0;
     bottom:0;
     left:0;
     right:0;
+    overflow:hidden;
 }
 
 #map-title {
